# KSP

./: .gitignore  Aufgabe4_njvm.c  CMakeLists.txt  KSP-HU1.TEAM  Oldnjvm.c  Oldnjvm.h  Prog10.asm  a.out  debug.txt  library.h  mknjvm  njvm  njvm.c  prog1.asm  prog2.asm  prog9.asm  protofunctions.c  protofunctions.h  test.asm
bigint/: Makefile  README
bigint/src/: Makefile  bigint.c
bigint/tst/: Makefile  support.c  testbip  testbip.c
